src/test/ui/associated-type-bounds/duplicate.stderr
warning: the feature `impl_trait_in_bindings` is incomplete and may cause the compiler to crash
  --> $DIR/duplicate.rs:6:12
   |
LL | #![feature(impl_trait_in_bindings)]
   |            ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:11:36
   |
LL | struct SI1<T: Iterator<Item: Copy, Item: Send>> { f: T }
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:13:36
   |
LL | struct SI2<T: Iterator<Item: Copy, Item: Copy>> { f: T }
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:15:39
   |
LL | struct SI3<T: Iterator<Item: 'static, Item: 'static>> { f: T }
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:17:45
   |
LL | struct SW1<T> where T: Iterator<Item: Copy, Item: Send> { f: T }
   |                                 ----------  ^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:19:45
   |
LL | struct SW2<T> where T: Iterator<Item: Copy, Item: Copy> { f: T }
   |                                 ----------  ^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:21:48
   |
LL | struct SW3<T> where T: Iterator<Item: 'static, Item: 'static> { f: T }
   |                                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:24:34
   |
LL | enum EI1<T: Iterator<Item: Copy, Item: Send>> { V(T) }
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:26:34
   |
LL | enum EI2<T: Iterator<Item: Copy, Item: Copy>> { V(T) }
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:28:37
   |
LL | enum EI3<T: Iterator<Item: 'static, Item: 'static>> { V(T) }
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:30:43
   |
LL | enum EW1<T> where T: Iterator<Item: Copy, Item: Send> { V(T) }
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:32:43
   |
LL | enum EW2<T> where T: Iterator<Item: Copy, Item: Copy> { V(T) }
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:34:46
   |
LL | enum EW3<T> where T: Iterator<Item: 'static, Item: 'static> { V(T) }
   |                               -------------  ^^^^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:37:35
   |
LL | union UI1<T: Iterator<Item: Copy, Item: Send>> { f: T }
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:39:35
   |
LL | union UI2<T: Iterator<Item: Copy, Item: Copy>> { f: T }
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:41:38
   |
LL | union UI3<T: Iterator<Item: 'static, Item: 'static>> { f: T }
   |                       -------------  ^^^^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:43:44
   |
LL | union UW1<T> where T: Iterator<Item: Copy, Item: Send> { f: T }
   |                                ----------  ^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:45:44
   |
LL | union UW2<T> where T: Iterator<Item: Copy, Item: Copy> { f: T }
   |                                ----------  ^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:47:47
   |
LL | union UW3<T> where T: Iterator<Item: 'static, Item: 'static> { f: T }
   |                                -------------  ^^^^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:50:32
   |
LL | fn FI1<T: Iterator<Item: Copy, Item: Send>>() {}
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:52:32
   |
LL | fn FI2<T: Iterator<Item: Copy, Item: Copy>>() {}
   |                    ----------  ^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:54:35
   |
LL | fn FI3<T: Iterator<Item: 'static, Item: 'static>>() {}
   |                    -------------  ^^^^^^^^^^^^^ re-bound here
   |                    |
   |                    `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:56:43
   |
LL | fn FW1<T>() where T: Iterator<Item: Copy, Item: Send> {}
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:58:43
   |
LL | fn FW2<T>() where T: Iterator<Item: Copy, Item: Copy> {}
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:60:46
   |
LL | fn FW3<T>() where T: Iterator<Item: 'static, Item: 'static> {}
   |                               -------------  ^^^^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:69:40
   |
LL | fn FAPIT1(_: impl Iterator<Item: Copy, Item: Send>) {}
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:71:40
   |
LL | fn FAPIT2(_: impl Iterator<Item: Copy, Item: Copy>) {}
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:73:43
   |
LL | fn FAPIT3(_: impl Iterator<Item: 'static, Item: 'static>) {}
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:63:42
   |
LL | fn FRPIT1() -> impl Iterator<Item: Copy, Item: Send> { iter::empty() }
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:65:42
   |
LL | fn FRPIT2() -> impl Iterator<Item: Copy, Item: Copy> { iter::empty() }
   |                              ----------  ^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:67:45
   |
LL | fn FRPIT3() -> impl Iterator<Item: 'static, Item: 'static> { iter::empty() }
   |                              -------------  ^^^^^^^^^^^^^ re-bound here
   |                              |
   |                              `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:76:39
   |
LL | const CIT1: impl Iterator<Item: Copy, Item: Send> = iter::empty();
   |                           ----------  ^^^^^^^^^^ re-bound here
   |                           |
   |                           `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:78:39
   |
LL | const CIT2: impl Iterator<Item: Copy, Item: Copy> = iter::empty();
   |                           ----------  ^^^^^^^^^^ re-bound here
   |                           |
   |                           `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:80:42
   |
LL | const CIT3: impl Iterator<Item: 'static, Item: 'static> = iter::empty();
   |                           -------------  ^^^^^^^^^^^^^ re-bound here
   |                           |
   |                           `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:82:40
   |
LL | static SIT1: impl Iterator<Item: Copy, Item: Send> = iter::empty();
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:84:40
   |
LL | static SIT2: impl Iterator<Item: Copy, Item: Copy> = iter::empty();
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:86:43
   |
LL | static SIT3: impl Iterator<Item: 'static, Item: 'static> = iter::empty();
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:89:46
   |
LL | fn lit1() { let _: impl Iterator<Item: Copy, Item: Send> = iter::empty(); }
   |                                  ----------  ^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:91:46
   |
LL | fn lit2() { let _: impl Iterator<Item: Copy, Item: Copy> = iter::empty(); }
   |                                  ----------  ^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:93:49
   |
LL | fn lit3() { let _: impl Iterator<Item: 'static, Item: 'static> = iter::empty(); }
   |                                  -------------  ^^^^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:96:35
   |
LL | type TAI1<T: Iterator<Item: Copy, Item: Send>> = T;
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:98:35
   |
LL | type TAI2<T: Iterator<Item: Copy, Item: Copy>> = T;
   |                       ----------  ^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:100:38
   |
LL | type TAI3<T: Iterator<Item: 'static, Item: 'static>> = T;
   |                       -------------  ^^^^^^^^^^^^^ re-bound here
   |                       |
   |                       `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:102:44
   |
LL | type TAW1<T> where T: Iterator<Item: Copy, Item: Send> = T;
   |                                ----------  ^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:104:44
   |
LL | type TAW2<T> where T: Iterator<Item: Copy, Item: Copy> = T;
   |                                ----------  ^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:106:47
   |
LL | type TAW3<T> where T: Iterator<Item: 'static, Item: 'static> = T;
   |                                -------------  ^^^^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:109:1
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:109:36
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:114:1
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:114:36
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:119:1
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:119:39
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:124:1
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:124:40
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:129:1
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:129:40
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:134:1
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:134:43
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:140:36
   |
LL | trait TRI1<T: Iterator<Item: Copy, Item: Send>> {}
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:142:36
   |
LL | trait TRI2<T: Iterator<Item: Copy, Item: Copy>> {}
   |                        ----------  ^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:144:39
   |
LL | trait TRI3<T: Iterator<Item: 'static, Item: 'static>> {}
   |                        -------------  ^^^^^^^^^^^^^ re-bound here
   |                        |
   |                        `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:146:34
   |
LL | trait TRS1: Iterator<Item: Copy, Item: Send> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:148:34
   |
LL | trait TRS2: Iterator<Item: Copy, Item: Copy> {}
   |                      ----------  ^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:150:37
   |
LL | trait TRS3: Iterator<Item: 'static, Item: 'static> {}
   |                      -------------  ^^^^^^^^^^^^^ re-bound here
   |                      |
   |                      `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:152:45
   |
LL | trait TRW1<T> where T: Iterator<Item: Copy, Item: Send> {}
   |                                 ----------  ^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:154:45
   |
LL | trait TRW2<T> where T: Iterator<Item: Copy, Item: Copy> {}
   |                                 ----------  ^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:156:48
   |
LL | trait TRW3<T> where T: Iterator<Item: 'static, Item: 'static> {}
   |                                 -------------  ^^^^^^^^^^^^^ re-bound here
   |                                 |
   |                                 `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:158:46
   |
LL | trait TRSW1 where Self: Iterator<Item: Copy, Item: Send> {}
   |                                  ----------  ^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:160:46
   |
LL | trait TRSW2 where Self: Iterator<Item: Copy, Item: Copy> {}
   |                                  ----------  ^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:162:49
   |
LL | trait TRSW3 where Self: Iterator<Item: 'static, Item: 'static> {}
   |                                  -------------  ^^^^^^^^^^^^^ re-bound here
   |                                  |
   |                                  `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:164:43
   |
LL | trait TRA1 { type A: Iterator<Item: Copy, Item: Send>; }
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:166:43
   |
LL | trait TRA2 { type A: Iterator<Item: Copy, Item: Copy>; }
   |                               ----------  ^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:168:46
   |
LL | trait TRA3 { type A: Iterator<Item: 'static, Item: 'static>; }
   |                               -------------  ^^^^^^^^^^^^^ re-bound here
   |                               |
   |                               `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:171:40
   |
LL | type TADyn1 = dyn Iterator<Item: Copy, Item: Send>;
   |                            ----------  ^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:175:44
   |
LL | type TADyn2 = Box<dyn Iterator<Item: Copy, Item: Copy>>;
   |                                ----------  ^^^^^^^^^^ re-bound here
   |                                |
   |                                `Item` bound here first

error[E0719]: the value of the associated type `Item` (from the trait `std::iter::Iterator`) is already specified
  --> $DIR/duplicate.rs:179:43
   |
LL | type TADyn3 = dyn Iterator<Item: 'static, Item: 'static>;
   |                            -------------  ^^^^^^^^^^^^^ re-bound here
   |                            |
   |                            `Item` bound here first

error: could not find defining uses
  --> $DIR/duplicate.rs:109:24
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                        ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:109:36
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                                    ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:114:24
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                        ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:114:36
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                                    ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:119:24
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                        ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:119:39
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                                       ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:124:28
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |                            ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:124:40
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |                                        ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:129:28
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |                            ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:129:40
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |                                        ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:134:28
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |                            ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:134:43
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |                                           ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:171:28
   |
LL | type TADyn1 = dyn Iterator<Item: Copy, Item: Send>;
   |                            ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:171:40
   |
LL | type TADyn1 = dyn Iterator<Item: Copy, Item: Send>;
   |                                        ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:175:32
   |
LL | type TADyn2 = Box<dyn Iterator<Item: Copy, Item: Copy>>;
   |                                ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:175:44
   |
LL | type TADyn2 = Box<dyn Iterator<Item: Copy, Item: Copy>>;
   |                                            ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:179:28
   |
LL | type TADyn3 = dyn Iterator<Item: 'static, Item: 'static>;
   |                            ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/duplicate.rs:179:43
   |
LL | type TADyn3 = dyn Iterator<Item: 'static, Item: 'static>;
   |                                           ^^^^^^^^^^^^^

error: aborting due to 93 previous errors

